--- a/index.html
+++ b/index.html
@@ -16,7 +16,46 @@
     </header>
     
     <main>
-
+       <h3>Le mie spese</h3>
+       <table>
+           <thead>
+               <!-- prima riga -->
+               <tr>
+                   <th>Numero</th>
+                   <th>Descrizione</th>
+                   <th>Costo</th>
+               </tr>
+           </thead>
+           <tbody>
+               <!-- seconda riga -->
+               <tr>
+                <th>1</th>
+                <th> Biglietto Aereo</th>
+                <th>120	 &#8364;</th>
+               </tr>
+               <!-- terza riga -->
+               <tr>
+                <th>1</th>
+                <th>Biglietto Aereo</th>
+                <th>120	
+                    &#8364;</th>
+               </tr>
+               <!-- quarta riga -->
+               <tr>
+                <th>1</th>
+                <th>Biglietto Aereo</th>
+                <th>120	
+                    &#8364;</th>
+               </tr>
+           </tbody>
+           <tfoot>
+              <tr>
+                <th>Totale</th>
+                <th></th>
+                <th>360&#8364;</th>
+              </tr>
+           </tfoot>
+       </table>
     </main>
 
     <footer>
