list things to do

--- a/index.html
+++ b/index.html
@@ -29,33 +29,40 @@
            <tbody>
                <!-- seconda riga -->
                <tr>
-                <th>1</th>
-                <th> Biglietto Aereo</th>
-                <th>120	 &#8364;</th>
+                <td>1</td>
+                <td> Biglietto Aereo</td>
+                <td>120	 &#8364;</td>
                </tr>
                <!-- terza riga -->
                <tr>
-                <th>1</th>
-                <th>Biglietto Aereo</th>
-                <th>120	
-                    &#8364;</th>
+                <td>1</td>
+                <td> Biglietto Aereo</td>
+                <td>120	 &#8364;</td>
                </tr>
                <!-- quarta riga -->
                <tr>
-                <th>1</th>
-                <th>Biglietto Aereo</th>
-                <th>120	
-                    &#8364;</th>
+                <td>1</td>
+                <td> Biglietto Aereo</td>
+                <td>120	 &#8364;</td>
                </tr>
            </tbody>
            <tfoot>
               <tr>
-                <th>Totale</th>
-                <th></th>
-                <th>360&#8364;</th>
+                <td>Totale</td>
+                <td></td>
+                <td>360	 &#8364;</td>
               </tr>
            </tfoot>
        </table>
+       <hr/>
+       <h3>Cose da fare</h3>
+       <ul>
+           <li>visitare la tower of london	&#10007;</li>
+           <li>visitare greenwitch	&#10003;</li>
+           <li>ascoltare un artista di strada a convent garden	&#10003;</li>
+           <li>mangiare i tipico fish and chips inglese	&#10007;</li>
+       </ul>
+       <hr>
     </main>
 
     <footer>
