--- a/index.html
+++ b/index.html
@@ -63,10 +63,53 @@
            <li>mangiare i tipico fish and chips inglese	&#10007;</li>
        </ul>
        <hr>
+       <h3>Info utili:</h3>
+       <ol>
+           <li>Numeri utili di emergenza
+               <ul>
+                   <li>
+                       <strong>999</strong>-Emergenza
+                   </li>
+                   <li>
+                    <strong>101</strong>Numero polizia
+
+                   </li>
+                   <li>
+                    <strong>111</strong>numero assistenza medica
+
+                   </li>
+               </ul>
+
+           </li>
+           <li>Hotel
+               <ul>
+                   <li>
+                    <strong>Nome hotel</strong >- Buckingan Palace
+
+                   </li>
+                   <li>
+                    <strong>Indirizzo hotel:</strong > Wenmister
+                   </li>
+               </ul>
+
+           </li>
+           <li>Aereo
+             <ul>
+                 <li>
+                    <strong>volo di andata:</strong > Y1234X
+                 </li>
+                 <li>
+                    <strong>volo di ritorno:</strong >Y1236X
+                 </li>
+             </ul>
+           </li>
+       </ol>
+       <hr>
     </main>
 
     <footer>
-
+     <h3>Le foto</h3>
+     <img src="" alt="londra">
     </footer>
 </body>
 </html>
