--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
     <footer>
      <h3>Le foto</h3>
-     <img src="" alt="londra">
+     <img src="https://media.istockphoto.com/id/695307836/it/foto/big-ben-londra-regno-unito-una-vista-del-famoso-punto-di-riferimento-di-londra-la-torre.jpg?s=170x170&k=20&c=aoU58tuXLTtK30b3Dm2yfxXjawVfhN5KkTgr_Oli8Ck=" alt="londra">
+     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/London_Big_Ben_Phone_box.jpg/220px-London_Big_Ben_Phone_box.jpg" alt="londra">
     </footer>
 </body>
 </html>
